# filtermaker

./: CHANGELOG.rst  LICENSE  README.md  README.rst  setup.cfg
.github/workflows/: test-package.yml
src/filtermaker/: __init__.py  filters.py
tests/: test_filters.py  test_version.py
