[metadata]
name = filtermaker
version = attr: filtermaker.__version__
author = Takayuki Hirayama
author_email = th.windbell+github@gmail.com
description = Make a text file filter
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/yukihira1992/filtermaker
project_urls =
    Bug Tracker = https://github.com/yukihira1992/filtermaker/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
keywords = text, file, filter, converter

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

